# hypo

./: .env.example  .gitignore  AGENTS.md  LAN_AUTO_DISCOVERY_PROGRESS.md  LICENSE  README.md  TESTING.md  changelog.md  debug_full_log.txt  debug_log.txt  fix_attempt_log.txt  full_log.txt  handoff_notes.md  package-lock.json  tasks.md
android/: README.md  build.gradle.kts  extract_coverage.py  find_uncovered.py  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
backend/: Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  fly.toml  load_test.sh
backend/scripts/: cert_fingerprint.sh  generate_and_set_secret.sh
backend/src/: lib.rs  main.rs
backend/src/crypto/: aead.rs  key_agreement.rs  mod.rs  test_vectors.rs
backend/src/handlers/: health.rs  mod.rs  pairing.rs  peers.rs  status.rs  websocket.rs
backend/src/middleware/: auth.rs  logging.rs
backend/src/models/: device.rs  message.rs  mod.rs
backend/src/services/: device_key_store.rs  metrics.rs  mod.rs  rate_limiter.rs  redis_client.rs  router.rs  session_manager.rs
backend/src/utils/: compression.rs  config.rs  mod.rs
backend/tests/: encryption_end_to_end.rs  health_status.rs  metrics.rs  multi_device_scenarios.rs  pairing_handler.rs  peers_handler.rs  performance_throughput.rs  session_manager_fanout.rs  websocket_auth.rs  websocket_edge_cases.rs
docs/: CLIPBOARD_DIAGNOSIS.md  COMMERCIALIZATION.md  DEBUGGING_SYNC_ISSUES.md  FALLBACK_REVIEW.md  INSTALLATION.md  LOGGING.md  README.md  RELEASE.md  TROUBLESHOOTING.md  USER_GUIDE.md  UUID_FORMAT_ANALYSIS.md  VERSION_MANAGEMENT.md  architecture.mermaid  crypto_research.md  history_management_comparison.md  optimization_completion_report.md  platform_comparison.md  platform_fixes_needed.md  (+8 more)
(+593 files in other folders)
